<resources>
    <string name="app_name">My Sofra</string>
    <string name="invalid_email">البريد الالكترونى يجب ان يكون بهذا الشكل  example@example.com</string>
    <string name="invalid_password">Password mast be more than 6 char and number</string>
    <string name="invalid_confirm_password">تأكيد كلمة المرور غير متطابقة</string>
    <string name="failed_required">الحقل مطلوب</string>
    <string name="food_request">طلب طعام</string>
    <string name="sell_food">بيع الطعام</string>
    <string name="email">"   ادخل البريد الالكترونى"</string>
    <string name="sign_in">"   تسجيل الدخول"</string>
    <string name="are_you_forget_password">هل نسيت كلمة المرور</string>
    <string name="login">"تسجيل الدخول      "</string>
    <string name="restourant_naem">اسم المطعم</string>
    <string name="phone_number">"  الجوال   "</string>
    <string name="district">الحى</string>
    <string name="city">المدينه</string>
    <string name="password">"  كلمة المرور "</string>
    <string name="password_confirm">"  تاكيد كلمة المرور  "</string>
    <string name="continuee">   متابعه</string>
    <string name="categories">"التصنيفات  "</string>
    <string name="watts_app">"  الواتس اب"</string>
    <string name="minimum_order">"  الحد الادنى للطلب  "</string>
    <string name="delivery_charge">"رسوم التوصيل  "</string>
    <string name="delivery_data">بيانات التوصيل</string>
    <string name="store_image">   صورة المتجر  </string>
    <string name="dismiss">dismiss</string>
    <string name="logging">جارى تسجيل الدخول</string>
    <string name="offline">برجاء التحقق من الإتصال بالإنترنت</string>
    <string name="waiit">برجاء الإنتظار...</string>
    <string name="naem">الاسم </string>
    <string name="please_enter_email">"   من فضلك ادخل البريد الالكترونى"</string>
    <string name="send">ارسال</string>
    <string name="code">  الكود  </string>
    <string name="write_new_password">من فضلك قم بكتابة كلمة السر الجديده</string>
    <string name="write_send_code">من فضلك قم بادخال الكود الذى تم ارساله</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">ادخل البريد الالكترونى من فضلك</string>
    <string name="enter_password">ادخل من فضلك الباسورد</string>
    <string name="register">ليس لديك حساب ؟ اضغط</string>
    <string name="there">هنا</string>
    <string name="enter_name">ادخل الاسم</string>
    <string name="please_select_type">من فضلك اختر نوع التواصل</string>
    <string name="re_enter_phone">ادخل رقم التليفون بشكل صحيح</string>
    <string name="profile_image">صوره شخصيه</string>
    <string name="cityName">اختر المدينه</string>
    <string name="districtName">اختر الحى</string>
    <string name="register_success">تم التسجيل بنجاح </string>
    <string name="registerr">جارى تسجيل حسابك ...</string>
    <string name="error">حدث خطأ ما</string>
    <string name="creating_account">Creating account</string>
    <string name="code_was_sent">The Code will sent to you in Email</string>
    <string name="enter_code">ادخل الكود</string>
    <string name="new_pssword_ismade">تم انشاء باسورد جديد</string>
    <string name="search_for_favourit_restaurant">ابحث عن مطعمك المفضل</string>
    <string name="please_fill_search_field">ادخل كلمة البحث</string>
    <string name="Duration_of_arrival">زمن الوصول      </string>
    <string name="invalid_Email">البريد الإكتروني يجب ان يكون بهذه الصيغة \" example@example.com\".</string>
    <string name="please_enter_watts_num">من فضلك ادخل رقم واتس صحيح</string>
    <string name="choose_picture">من فضلك اختر صوره</string>
    <string name="openn">مفتوح</string>
    <string name="closee">مغلق</string>
    <string name="restaurants_comments_and_ratings">التعليقات والتقيمات</string>
    <string name="restaurnt_information">معلومات المتجر</string>
    <string name="food_menu">قائمة الطعام</string>
    <string name="status">الحاله</string>
    <string name="minimum_ord">الحد الادنى</string>
    <string name="add_comment_rate">اضف تعليق او تقيم</string>
    <string name="happy_share_comment_rating">يسعدنا مشاركتك بتعليق او تقيم</string>
    <string name="price">السعر : </string>
    <string name="call">اتصال</string>
    <string name="accept">قبول</string>
    <string name="cancel">الغاء</string>
    <string name="new_orders">طلبات جديده</string>
    <string name="current_orders">طلبات حاليه</string>
    <string name="recent_orders">طلبات سابقه</string>
    <string name="oreder_number">رقم الطلب :</string>
    <string name="adress">العنوان :</string>
    <string name="total">الاجمالى :</string>
    <string name="confirm_the_delivery">تاكيد التوصيل</string>
    <string name="customer">العميل :</string>
    <string name="the_request_is_complet">الطلب مكتمل</string>
    <string name="confirm_delivery">تاكيد التسليم</string>
    <string name="my_category">تصنيفاتى</string>
    <string name="order_canceled">الطلب ملغى</string>
    <string name="quantity">الكميه :</string>
    <string name="select_your_rating">اختار تقيمك</string>
    <string name="add">اضف</string>
    <string name="request_details">تفاصيل الطلب</string>
    <string name="add_notification">اضافة ملاحظات</string>
    <string name="delivery_adress">عنوان التوصيل</string>
    <string name="paying_off">الدفع</string>
    <string name="cash_on_delivery">الدفع نقدا</string>
    <string name="online_payment">الدفع اونلاين</string>
    <string name="tt">الدفع اونلاين</string>
    <string name="shoud_register">يجب تسجيل الدخول </string>
    <string name="moree">المزيد </string>
    <string name="contact_us">       تواصل معنا   </string>
    <string name="register_out">    تسجيل الخروج   </string>
    <string name="about_app">     عن التطبيق  </string>
    <string name="chang_password">    تغير كلمة المرو   </string>
    <string name="offers">    العروض   </string>
    <string name="who_iam">    من نحن   </string>
    <string name="complaint">شكوى </string>
    <string name="suggest">اقترح</string>
    <string name="enquery">استعلام </string>
    <string name="new_offers">جديد العروض </string>
    <string name="add_new_offers"> اضف عرض جديد </string>
    <string name="details">التفاصيل</string>
    <string name="full_name">الاسم كاملا</string>
    <string name="what_is_yout_question">ما هى رسالتك</string>
    <string name="sign_out">  هل انت متاكد من الخروج؟</string>
    <string name="order_is_confirm">تم تاكيد الطلب </string>
    <string name="refuse_reasion">سبب الرفض</string>
    <string name="cancel_order"> تم الغاء الطلب</string>
    <string name="update"> تعديل </string>
    <string name="deletee"> تم الحذف </string>
    <string name="category_img"> صورة التصنيف </string>
    <string name="categoyr_name">اسم التصنيف</string>
    <string name="my_offers">    عروضى   </string>
    <string name="order_is_accept"> تم قبول الطلب </string>
    <string name="enter_ccoast"> ادخل التكلفه </string>
    <string name="enter_minimum_charg"> ادخل الحد الادنى للشحن </string>
    <string name="enter_new_password"> ادخل الباسورد الجديد </string>
    <string name="enter_confirm_new_password"> ادخل تاكيد الباسورد الجديد </string>
    <string name="ensure_same_password"> تاكد من تطابق الباسورد </string>
    <string name="enter_old_password"> ادخل الباسورد القديم </string>
    <string name="passwordWeak">كلمة المرور ضعيفة</string>
    <string name="add_pic_to_review">إضافة صوره للعرض</string>
    <string name="review_pic">صوره للعرض</string>
    <string name="name_of_review">اسم العرض</string>
    <string name="prief_description">وصف مختصر</string>
    <string name="enter_prief_description">ادخل وصف مختصر</string>
    <string name="from">من</string>
    <string name="to">الى</string>
    <string name="choose_date_start_offer">أختر تاريخ بدء العرض</string>
    <string name="choose_date_end_offer">أختر تاريخ انتهاء العرض</string>
    <string name="update_is_done"> تم التعديل </string>
    <string name="enter_price"> ادخل السعر </string>
    <string name="enter_price_inoffer">السعر فى العرض </string>
    <string name="please_select_image">من فضلك اختر صوره </string>
    <string name="add_is_made">تم الاضافه</string>
    <string name="offer_details">تفاصيل العرض</string>
    <string name="special_order">طلب خاص</string>
    <string name="enter_your_order_here"> ادخل طلبك هنا</string>
    <string name="confirm_order">تاكيد الطلب</string>
    <string name="add_more"> اضافة المزيد</string>
    <string name="total_amount"> المبلغ الاجمالى</string>
    <string name="please_enter_adress"> من فضلك ادخل العنوان</string>
    <string name="add_your_comment_here"> اضف تعليقك هنا </string>
    <string name="choose_your_rating"> اختار تقييمك </string>
    <string name="select_image_rate">اختار صوره للتقيم </string>
    <string name="add_comment">اضف تعليق</string>
    <string name="coin">ريال</string>
    <string name="commission">العموله</string>
    <string name="application_commissions">عمولات التطبيق :</string>
    <string name="restaurant_sales">مبيعات المطعم :</string>
    <string name="what_is_paid">ما تم سداده :</string>
    <string name="residual">المتبقى :</string>
    <string name="our_request_sent_to_the_officials">تم ارسال طلبك للمسئولين</string>
    <string name="with_sofra_name">باسم سفره</string>
    <string name="you_sure_delet_room_order">هل انت متاكد انك تريد الغاء الطلبات التى لم يتم تاكديها</string>
    <string name="just_now">الأن</string>
    <string name="From">من</string>
    <string name="a_minute_ago">من دقيقه</string>
    <string name="minutes_ago">دقائق</string>
    <string name="an_hour_ago">من ساعة</string>
    <string name="hours_ago">ساعات</string>
    <string name="yesterday">البارحه</string>
    <string name="days_ago">ايام</string>





</resources>
