<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dim_16"
    tools:context=".ui.fragment.client.homeFragment.ContactUsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/dim_16"
                android:text="@string/contact_us"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/fragment_contact_us_edt_fullname"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/rectangle_button"
                android:gravity="center_vertical"
                android:hint="@string/naem"
                android:paddingEnd="@dimen/dim_16"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/fragment_contact_us_edt_email"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/dim_16"
                android:background="@drawable/rectangle_button"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:paddingEnd="@dimen/dim_16"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/fragment_contact_us_edt_phone"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/dim_16"
                android:background="@drawable/rectangle_button"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/dim_16"
                android:hint="@string/phone_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/fragment_contact_us_edt_message"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/dim_16"
                android:background="@drawable/rectangle_button"
                android:hint="@string/what_is_yout_question"
                android:inputType="text"
                android:paddingEnd="@dimen/dim_16"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioGroup
                android:id="@+id/fragment_contact_us_rdg_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dim_16"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/fragment_contact_us_radio_query"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enquery"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/fragment_contact_us_radio_suggest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suggest"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <RadioButton
                    android:id="@+id/fragment_contact_us_radio_complaint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complaint"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            </RadioGroup>

            <Button
                android:id="@+id/fragment_contact_us_btn_send"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dim_16"
                android:background="@drawable/rectangle56"
                android:text="@string/send" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>