<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_66"
    android:paddingEnd="@dimen/dim_25"
    android:paddingStart="@dimen/dim_8"
    tools:context=".ui.fragment.client.clientCycle.RegisterClientFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
        android:id="@+id/fragment_register_img_profileImage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/picneww_account"
        android:padding="15dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/circle_shape_on"/>

    <EditText

        android:id="@+id/fragment_register_edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/person_black_24dp"
        android:layout_marginRight="@dimen/dim_8"
        android:hint="@string/naem" />

    <EditText
        android:id="@+id/fragment_register_edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_8"
        android:drawableEnd="@drawable/messageshape"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/fragment_register_edt_phonenum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_8"
        android:drawableEnd="@drawable/phone24dp"
        android:layout_marginRight="@dimen/dim_8"
        android:hint="@string/phone_number"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dim_8">
        <Spinner
            android:id="@+id/fragment_register_sp_city"
            android:layout_width="366dp"
            android:layout_height="wrap_content"

            android:layoutDirection="rtl"
            android:autofillHints="@string/city"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/person_black_24dp">
        </ImageView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fragment_register_linear_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dim_16"
        android:visibility="gone">
        <Spinner
            android:id="@+id/fragment_register_sp_district"
            android:layout_width="366dp"
            android:layout_height="wrap_content"

            android:layoutDirection="rtl"
            android:autofillHints="@string/district"
           />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/person_black_24dp">
        </ImageView>
    </LinearLayout>


    <EditText
        android:id="@+id/fragment_register_edt_passewrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_8"
        android:drawableEnd="@drawable/lock"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/fragment_register_edt_passewrd_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_8"
        android:drawableEnd="@drawable/lock"
        android:hint="@string/password_confirm"/>
    <Button
        android:id="@+id/fragment_register_btn_register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dim_32"
        android:background="@drawable/rectangle56"
        android:text="@string/continuee"
        android:textSize="20sp"/>



</LinearLayout>
    </ScrollView>

</LinearLayout>