<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_66"
    tools:context=".ui.fragment.client.clientCycle.CreatNewPasswordClientAndRestaurantFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_50"
            android:text="@string/write_send_code"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/fragment_creat_new_password_edt_code"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="@drawable/rectangel_shapee_greylight"
            android:hint="@string/code"
            android:paddingStart="@dimen/dim_8"
            android:paddingEnd="@dimen/dim_8"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/write_new_password"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/fragment_creat_new_password_edt_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dim_25"
            android:background="@drawable/rectangel_shapee_greylight"
            android:hint="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/fragment_creat_new_password_edt_confirm_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dim_32"
            android:background="@drawable/rectangel_shapee_greylight"
            android:hint="@string/password_confirm"
            android:textSize="20sp" />

        <Button
            android:id="@+id/fragment_creat_new_password_btn_send"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_50"
            android:background="@drawable/rectangle56"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>