<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.client.clientCycle.LoginClient">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_66"
    android:orientation="vertical"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dim_8"
    android:paddingEnd="@dimen/dim_32"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/fragment_login_edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:drawableEnd="@drawable/messageshape"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/fragment_login_edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/lock"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/fragment_login_txtv_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:drawableStart="@drawable/lock"
        android:text="@string/are_you_forget_password"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/fragment_login_rlt_register"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle56"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/arrow_sign_in"
            android:gravity="center_vertical"
            android:text="@string/sign_in" />



    </RelativeLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/greydark2"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="244dp"
        >
        <TextView
            android:id="@+id/fragment_login_txtv_creataccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/there"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>