<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_66"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.fragment.restaurant.restaurantCycle.RestaurantLoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/dim_8"
            android:paddingEnd="@dimen/dim_8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/sign_in"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/fragment_restaurant_login_edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:drawableEnd="@drawable/messageshape"
                android:hint="@string/email" />


            <EditText
                android:id="@+id/fragment_restaurant_login_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/lock"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/fragment_restaurant_login_txtv_forgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="50dp"
                android:layout_marginEnd="100dp"

                android:drawableStart="@drawable/lock"
                android:text="@string/are_you_forget_password"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/fragment_restaurant_login_rlt_register"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/rectangle56"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="12dp"
                    android:drawableEnd="@drawable/arrow_sign_in"
                    android:gravity="center_vertical"
                    android:text="@string/sign_in" />


            </RelativeLayout>
        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="244dp"
        android:background="@color/greydark2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_restaurant_login_txtv_creataccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/there"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>


