<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="450dp"
    android:padding="@dimen/dim_32"
    android:background="@color/greydark">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dim_5"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
android:text="@string/category_img"
        android:textSize="30sp"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/shape_update_category_alertdialoug_cimg_category_img"
        android:layout_marginTop="@dimen/dim_16"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/image_black_24dp"
        android:layout_gravity="center_horizontal"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_50"
    android:layout_marginTop="25dp"
    android:background="@drawable/rectangel_shape_white">
    <EditText
        android:id="@+id/shape_update_category_alertdialoug_edt_categoryname"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:hint="@string/categoyr_name"/>


</LinearLayout>



    <Button
        android:id="@+id/shape_update_category_alertdialoug_btn_addbutton"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/dimen_50"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:text="@string/add"
        android:textSize="25sp"
        android:background="@drawable/rectangle56"/>
</LinearLayout>